fixed overflow on channel title

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -153,7 +153,7 @@ $background-modifier-active: rgba(79, 84, 92, 0.24);
   background: $background-floating;
   padding: 8px;
   white-space: nowrap;
-  max-width: 210px;
+  max-width: 150px;
   width: 100%;
   border-radius: 3px;
   color: $text-white;
@@ -430,6 +430,12 @@ input {
     box-shadow: 0 1px 0 rgba(4, 4, 5, 0.2), 0 1.5px 0 rgba(6, 6, 7, 0.05),
       0 2px 0 rgba(4, 4, 5, 0.05);
     cursor: pointer;
+
+    h4 {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
 
     &:hover {
       background: $background-modifier-hover;
